styles.css
/* ... */
.w-commerce-commercecheckoutsummarylineitem,
.w-commerce-commercecheckoutordersummaryextraitemslistitem {
    flex-direction: row;
    justify-content: space-between;
    margin-bottom: 8px;
    display: flex;
}

.w-commerce-commercecheckoutsummarytotal {
    font-weight: 700;
}

.w-commerce-commercecheckoutplaceorderbutton {
    color: #fff;
    cursor: pointer;
    -webkit-appearance: none;
    -ms-appearance: none;
    appearance: none;
    text-align: center;
    background-color: #3898ec;
    border-width: 0;
    border-radius: 3px;
    align-items: center;
    margin-bottom: 20px;
    padding: 9px 15px;
    text-decoration: none;
    display: block;
}

.w-commerce-commercecheckouterrorstate {
    background-color: #ffdede;
    margin-top: 16px;
    margin-bottom: 16px;
    padding: 10px 16px;
}

.w-commerce-commercepaypalcheckoutformcontainer {
    background-color: #f5f5f5;
    width: 100%;
    min-height: 100vh;
    padding: 20px;
}

.w-commerce-commercecheckoutcustomerinfosummarywrapper {
    margin-bottom: 20px;
}

.w-commerce-commercecheckoutsummaryitem,
.w-commerce-commercecheckoutsummarylabel {
    margin-bottom: 8px;
}

.w-commerce-commercecheckoutsummaryflexboxdiv {
    flex-direction: row;
    justify-content: flex-start;
    display: flex;
}

.w-commerce-commercecheckoutsummarytextspacingondiv {
    margin-right: 0.33em;
}

.w-commerce-commercecheckoutpaymentsummarywrapper {
    margin-bottom: 20px;
}

.w-commerce-commercepaypalcheckouterrorstate {
    background-color: #ffdede;
    margin-top: 16px;
    margin-bottom: 16px;
    padding: 10px 16px;
}

.w-commerce-commerceorderconfirmationcontainer {
    background-color: #f5f5f5;
    width: 100%;
    min-height: 100vh;
    padding: 20px;
}

.w-commerce-commercecheckoutshippingsummarywrapper {
    margin-bottom: 20px;
}

@media screen and (max-width: 767px) {
    .w-commerce-commercelayoutcontainer {
        flex-direction: column;
        align-items: stretch;
    }

    .w-commerce-commercelayoutmain {
        flex-basis: auto;
        margin-right: 0;
    }

    .w-commerce-commercelayoutsidebar {
        flex-basis: auto;
    }
}

@media screen and (max-width: 479px) {
    .w-commerce-commercecheckoutemailinput,
    .w-commerce-commercecheckoutshippingfullname,
    .w-commerce-commercecheckoutshippingstreetaddress,
    .w-commerce-commercecheckoutshippingstreetaddressoptional {
        font-size: 16px;
    }

    .w-commerce-commercecheckoutrow {
        flex-direction: column;
    }

    .w-commerce-commercecheckoutshippingcity,
    .w-commerce-commercecheckoutshippingstateprovince,
    .w-commerce-commercecheckoutshippingzippostalcode,
    .w-commerce-commercecheckoutshippingcountryselector,
    .w-commerce-commercecheckoutcardnumber,
    .w-commerce-commercecheckoutcardexpirationdate,
    .w-commerce-commercecheckoutcardsecuritycode,
    .w-commerce-commercecheckoutbillingfullname,
    .w-commerce-commercecheckoutbillingstreetaddress,
    .w-commerce-commercecheckoutbillingstreetaddressoptional,
    .w-commerce-commercecheckoutbillingcity,
    .w-commerce-commercecheckoutbillingstateprovince,
    .w-commerce-commercecheckoutbillingzippostalcode,
    .w-commerce-commercecheckoutbillingcountryselector {
        font-size: 16px;
    }
}

.text-block {
    text-align: center;
}

.text-block-2 {
    text-align: center;
    font-size: 104px;
    line-height: 104px;
}

.image {
    text-align: center;
    object-fit: fill;
    width: 40%;
    margin-top: 5vh;
    display: block;
}

.div-block {
    text-align: center;
    justify-content: center;
    align-items: center;
    display: flex;
}

.text-block-3 {
    font-family: Rabie, sans-serif;
    font-size: 5vw;
    line-height: 100px;
}

.div-block-2 {
    grid-column-gap: 5vw;
    grid-row-gap: 5vw;
    grid-template-rows: auto auto;
    grid-template-columns: 1fr 1fr;
    grid-auto-columns: 1fr;
    justify-content: center;
    align-items: center;
    margin-top: 3vh;
    display: flex;
}

.image-2 {
    width: 30%;
}

@media screen and (max-width: 767px) {
    .div-block-2 {
        margin-top: 3svh;
    }
}

@font-face {
    font-family: 'Rabie';
    src: url('https://uploads-ssl.webflow.com/661d7df7c2da578121dee41e/6622b2d147247849e35eb6b2_Rabie-Extrabold.ttf')
            format('truetype'),
        url('https://uploads-ssl.webflow.com/661d7df7c2da578121dee41e/6622b2d156a0aa36e353c97f_Rabie-Bold.ttf')
            format('truetype');
    font-weight: 700;
    font-style: normal;
    font-display: swap;
}
@font-face {
    font-family: 'Rabie';
    src: url('https://uploads-ssl.webflow.com/661d7df7c2da578121dee41e/6622b2d1dcaaf8eacddcc8da_Rabie-Extralight.ttf')
        format('truetype');
    font-weight: 200;
    font-style: normal;
    font-display: swap;
}
@font-face {
    font-family: 'Rabie';
    src: url('https://uploads-ssl.webflow.com/661d7df7c2da578121dee41e/6622b2d147247849e35eb6b8_Rabie-Semibold.ttf')
        format('truetype');
    font-weight: 600;
    font-style: normal;
    font-display: swap;
}
@font-face {
    font-family: 'Rabie';
    src: url('https://uploads-ssl.webflow.com/661d7df7c2da578121dee41e/6622b2d10ba548948580d070_Rabie-Medium.ttf')
        format('truetype');
    font-weight: 500;
    font-style: normal;
    font-display: swap;
}
@font-face {
    font-family: 'Rabie';
    src: url('https://uploads-ssl.webflow.com/661d7df7c2da578121dee41e/6622b2d1b540d271a84b5d12_Rabie-Light.ttf')
        format('truetype');
    font-weight: 300;
    font-style: normal;
    font-display: swap;
}

